<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GenerateReports">

    <Button
        android:id="@+id/bt_suppliers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickgenerate"
        android:text="@string/bt_suppliers"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/tv_enterdate"
        app:layout_constraintEnd_toStartOf="@+id/bt_buyers"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/bt_buyers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickgenerate"
        android:text="@string/bt_buyers"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/tv_enterdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_suppliers"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/bt_MSales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickgenerate"
        android:text="@string/bt_MSales"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/bt_sumpurch"
        app:layout_constraintEnd_toStartOf="@+id/bt_Sumsales"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_to"
        app:layout_constraintVertical_bias="0.7" />

    <EditText
        android:id="@+id/et_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_to"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#A1887F"
        app:layout_constraintBottom_toTopOf="@+id/bt_MSales"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.737"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_from"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/et_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_from"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#A1887F"
        app:layout_constraintBottom_toTopOf="@+id/et_to"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.737"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_enterdate"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/bt_Sumsales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickgenerate"
        android:text="@string/bt_SumSales"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/bt_sumpurch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_MSales"
        app:layout_constraintTop_toBottomOf="@+id/et_to"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/bt_sumpurch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickgenerate"
        android:text="@string/bt_SumPurchases"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/tv_enterdate"
        android:layout_width="363dp"
        android:layout_height="49dp"
        android:text="@string/tv_date"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/et_from"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_suppliers"
        app:layout_constraintVertical_bias="0.6" />
</androidx.constraintlayout.widget.ConstraintLayout>