<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InvoiceScreen">

    <EditText
        android:id="@+id/et_invoiceid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_invoiceid"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#A1887F"
        app:layout_constraintBottom_toTopOf="@+id/et_invoiseagent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/et_invoiseagent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_invoiceagent"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#A1887F"
        app:layout_constraintBottom_toTopOf="@+id/et_invoicedate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_invoiceid"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/et_invoicedate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_invoicedate"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColorHint="#A1887F"
        app:layout_constraintBottom_toTopOf="@+id/et_invoicedesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_invoiseagent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/et_invoicedesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_invoicedesc"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#A1887F"
        app:layout_constraintBottom_toTopOf="@+id/cb_invoicebuy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_invoicedate"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/bt_showinvoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickInvoice"
        android:text="@string/bt_show"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_saveinvoice"
        app:layout_constraintTop_toBottomOf="@+id/cb_invoicebuy"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/bt_saveinvoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickInvoice"
        android:text="@string/bt_save"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_showinvoice"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_invoicebuy"
        app:layout_constraintVertical_bias="0.5" />

    <CheckBox
        android:id="@+id/cb_invoicebuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/et_invoiceisbuy"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_showinvoice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_invoicedesc"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>