<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InvoiceDetailScreen">

    <EditText
        android:id="@+id/et_detaiid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_detailid"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#A1887F"
        app:layout_constraintBottom_toTopOf="@+id/et_detailinvoiceid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/et_detailmaterialid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_detailmaterialid"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#A1887F"
        app:layout_constraintBottom_toTopOf="@+id/et_detailnum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_detailinvoiceid"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/et_detailinvoiceid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_detailinvoiceid"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#A1887F"
        app:layout_constraintBottom_toTopOf="@+id/et_detailmaterialid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_detaiid"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/et_detailprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_detailprice"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#A1887F"
        app:layout_constraintBottom_toTopOf="@+id/bt_savedetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_detailnum"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/et_detailnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_detailnumber"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#A1887F"
        app:layout_constraintBottom_toTopOf="@+id/et_detailprice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_detailmaterialid"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/bt_savedetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickDetail"
        android:text="@string/bt_save"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_showdetail"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <Button
        android:id="@+id/bt_showdetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickDetail"
        android:text="@string/bt_show"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_savedetail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>