<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MaterialScreen">

    <EditText
        android:id="@+id/et_materID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_materid"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#A1887F"
        app:layout_constraintBottom_toTopOf="@+id/et_materName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/et_materDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_materdesc"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#A1887F"
        app:layout_constraintBottom_toTopOf="@+id/bt_showmater"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_matertypeID"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/et_matertypeID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_matertypeid"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#A1887F"
        app:layout_constraintBottom_toTopOf="@+id/et_materDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_materName"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/et_materName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_matername"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#A1887F"
        app:layout_constraintBottom_toTopOf="@+id/et_matertypeID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_materID"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/bt_showmater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickmater"
        android:text="@string/bt_show"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_savemater"
        app:layout_constraintTop_toBottomOf="@+id/et_materDesc"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/bt_savemater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickmater"
        android:text="@string/bt_save"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_showmater"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_materDesc"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>