<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgentScreen">

    <EditText
        android:id="@+id/et_agentid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_agentid"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#A1887F"
        app:layout_constraintBottom_toTopOf="@+id/et_agentname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/et_agentdesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_agentdesc"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#A1887F"
        app:layout_constraintBottom_toTopOf="@+id/bt_agentshow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_agentname"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/et_agentname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_agentname"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#A1887F"
        app:layout_constraintBottom_toTopOf="@+id/et_agentdesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_agentid"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/bt_agentshow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickagent"
        android:text="@string/bt_show"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_agentsave"
        app:layout_constraintTop_toBottomOf="@+id/et_agentdesc"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/bt_agentsave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickagent"
        android:text="@string/bt_save"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_agentshow"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_agentdesc"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>